# Orthogonal-Pipes

./: .gitignore  LICENSE  Orthogonal-Pipes.cabal  README.md  stack.yaml
bench/: Bench.hs
src/OrthPipes/: Plan.hs  Prelude.hs  Proxy.hs  Tutorial.hs
src/Pipes/: Orth.hs
src/Pipes/Orth/: Core.hs  Internal.hs
test/: Main.hs
