name:                Orthogonal-Pipes
version:             0.1.0.0
synopsis:            Orthogonal representation of Haskell Pipes
-- description:
homepage:            https://github.com/rubenpieters/Orthogonal-Pipes#readme
license:             BSD3
license-file:        LICENSE
author:              Ruben Pieters
maintainer:          rubenpietersgithub@gmail.com
copyright:           2018 Ruben Pieters
category:            Control, Pipes
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

Library
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , transformers
  exposed-modules:     Pipes.Orth
                     , Pipes.Orth.Core
                     , Pipes.Orth.Internal
  GHC-Options: -O2 -Wall
