name:                Orthogonal-Pipes
version:             0.1.0.0
synopsis:            Orthogonal representation of Haskell Pipes
-- description:
homepage:            https://github.com/rubenpieters/Orthogonal-Pipes#readme
license:             BSD3
license-file:        LICENSE
author:              Ruben Pieters
maintainer:          rubenpietersgithub@gmail.com
copyright:           2018 Ruben Pieters
category:            Control, Pipes
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

Library
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , transformers
                     , exceptions
                     , mmorph
                     , mtl
                     , void
                     , semigroups
  exposed-modules:     OrthPipes.Plan
                     , OrthPipes.Proxy
  GHC-Options: -O2 -Wall

test-suite tests
    Default-Language: Haskell2010
    Type:             exitcode-stdio-1.0
    HS-Source-Dirs:   test
    Main-Is:          Main.hs
    GHC-Options:      -Wall -rtsopts -fno-warn-missing-signatures -fno-enable-rewrite-rules

    Build-Depends:    base >= 4.7 && < 5
                    , Orthogonal-Pipes
                    , QuickCheck
                    , mtl
                    , test-framework
                    , test-framework-quickcheck2
                    , transformers

benchmark bench
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   bench
  main-is:          Bench.hs
  ghc-options:      -O2 -rtsopts -threaded

  build-depends:    base
                  , mtl
                  , io-streams
                  , criterion
                  , conduit
                  , machines
                  , pipes
                  , streaming
                  , vector
                  , Orthogonal-Pipes